// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableTemplateSitewideOptions different configurations are formatted with euiSelectableTemplateSitewideFormatOptions() 1`] = `
[
  {
    "append": <EuiAvatar
      name="Default Space"
      size="s"
      type="space"
    />,
    "aria-label": "aria-label",
    "avatar": {
      "name": "Default Space",
    },
    "className": "euiSelectableTemplateSitewide__listItem testClass1 testClass2",
    "css": [
      {
        "name": "q12130-euiSelectableTemplateSitewide__listItem",
        "styles": "&:hover,&.euiSelectableListItem-isFocused{&:not([aria-disabled='true']){.euiSelectableListItem__text{text-decoration:none;}.euiSelectableTemplateSitewide__listItemTitle{text-decoration:underline;}}};label:euiSelectableTemplateSitewide__listItem;",
        "toString": [Function],
      },
      {
        "name": "hzx95w-euiTestCss",
        "styles": "color:red;label:euiTestCss;",
        "toString": [Function],
      },
    ],
    "data-test-subj": "test-this",
    "key": "Basic data application",
    "label": "Basic data application",
    "meta": [
      {
        "text": "Application",
        "type": "application",
      },
    ],
    "prepend": undefined,
    "title": "Basic data application • Application",
    "url": "welcome-dashboards",
  },
  {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "css": [
      {
        "name": "q12130-euiSelectableTemplateSitewide__listItem",
        "styles": "&:hover,&.euiSelectableListItem-isFocused{&:not([aria-disabled='true']){.euiSelectableListItem__text{text-decoration:none;}.euiSelectableTemplateSitewide__listItemTitle{text-decoration:underline;}}};label:euiSelectableTemplateSitewide__listItem;",
        "toString": [Function],
      },
      undefined,
    ],
    "icon": {
      "type": "user",
    },
    "key": "Platform with deployment highlighted",
    "label": "Platform with deployment highlighted",
    "meta": [
      {
        "text": "Account",
        "type": "platform",
      },
      {
        "highlightSearchString": true,
        "text": "personal-databoard",
        "type": "deployment",
      },
    ],
    "prepend": <EuiIcon
      color="subdued"
      size="l"
      type="user"
    />,
    "title": "Platform with deployment highlighted • Account, personal-databoard",
  },
  {
    "append": undefined,
    "className": "euiSelectableTemplateSitewide__listItem",
    "css": [
      {
        "name": "q12130-euiSelectableTemplateSitewide__listItem",
        "styles": "&:hover,&.euiSelectableListItem-isFocused{&:not([aria-disabled='true']){.euiSelectableListItem__text{text-decoration:none;}.euiSelectableTemplateSitewide__listItemTitle{text-decoration:underline;}}};label:euiSelectableTemplateSitewide__listItem;",
        "toString": [Function],
      },
      undefined,
    ],
    "icon": {
      "color": "accent",
      "type": "warning",
    },
    "key": "Other metas",
    "label": "Other metas",
    "meta": [
      {
        "text": "Article",
        "type": "article",
      },
      {
        "text": "Case",
        "type": "case",
      },
      {
        "text": "Text",
      },
      {
        "text": "I have a custom type",
        "type": "PINK",
      },
    ],
    "prepend": <EuiIcon
      color="accent"
      size="l"
      type="warning"
    />,
    "searchableLabel": "Totally custom with pink metadata",
    "title": "Other metas • Article, Case, Text, I have a custom type",
  },
]
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() 1`] = `
<div>
  <span
    class="euiSelectableTemplateSitewide__listItemTitle"
  >
    Basic data application
  </span>
  <span
    class="euiSelectableTemplateSitewide__optionMetasList emotion-euiSelectableTemplateSitewide__optionMetasList"
  >
    <span
      class="euiSelectableTemplateSitewide__optionMeta--application euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta-application"
      type="application"
    >
      Application
    </span>
  </span>
</div>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() 2`] = `
<div>
  <span
    class="euiSelectableTemplateSitewide__listItemTitle"
  >
    Platform with deployment highlighted
  </span>
  <span
    class="euiSelectableTemplateSitewide__optionMetasList emotion-euiSelectableTemplateSitewide__optionMetasList"
  >
    <span
      class="euiSelectableTemplateSitewide__optionMeta--platform euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta-platform"
      type="platform"
    >
      Account
    </span>
    <span
      class="euiSelectableTemplateSitewide__optionMeta--deployment euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta-deployment"
      type="deployment"
    >
      personal-databoard
    </span>
  </span>
</div>
`;

exports[`EuiSelectableTemplateSitewideOptions different configurations are rendered with euiSelectableTemplateSitewideRenderOptions() 3`] = `
<div>
  <span
    class="euiSelectableTemplateSitewide__listItemTitle"
  >
    Other metas
  </span>
  <span
    class="euiSelectableTemplateSitewide__optionMetasList emotion-euiSelectableTemplateSitewide__optionMetasList"
  >
    <span
      class="euiSelectableTemplateSitewide__optionMeta--article euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta-article"
      type="article"
    >
      Article
    </span>
    <span
      class="euiSelectableTemplateSitewide__optionMeta--case euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta-case"
      type="case"
    >
      Case
    </span>
    <span
      class="euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta"
    >
      Text
    </span>
    <span
      class="euiSelectableTemplateSitewide__optionMeta--PINK euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta"
      type="PINK"
    >
      I have a custom type
    </span>
  </span>
</div>
`;

exports[`EuiSelectableTemplateSitewideOptions highlights both label and meta text on search 1`] = `
<div>
  <span
    class="euiSelectableTemplateSitewide__listItemTitle"
  >
    <mark
      class="euiMark emotion-euiMark-hasScreenReaderHelpText"
    >
      search
    </mark>
     me
  </span>
  <span
    class="euiSelectableTemplateSitewide__optionMetasList emotion-euiSelectableTemplateSitewide__optionMetasList"
  >
    <span
      class="euiSelectableTemplateSitewide__optionMeta emotion-euiSelectableTemplateSitewide__optionMeta"
    >
      is searched
    </span>
  </span>
</div>
`;
